--- a/sheets/plugins/solver/CMakeLists.txt
+++ b/sheets/plugins/solver/CMakeLists.txt
@@ -3,6 +3,7 @@ if(GSL_FOUND)
 add_definitions(-DTRANSLATION_DOMAIN=\"sheetssolver\")
 
 include_directories( ${CMAKE_SOURCE_DIR}/sheets
+                     ${CMAKE_BINARY_DIR}/sheets
                      ${CMAKE_SOURCE_DIR}/sheets/ui
                      ${KOMAIN_INCLUDES} 
                      ${GSL_INCLUDE_DIR} )
