--- a/sheets/shape/CMakeLists.txt
+++ b/sheets/shape/CMakeLists.txt
@@ -2,6 +2,7 @@ add_definitions(-DTRANSLATION_DOMAIN=\"calligra_shape_spreadsheet\")
 
 include_directories(
     ${CMAKE_SOURCE_DIR}/sheets
+    ${CMAKE_BINARY_DIR}/sheets
     ${CMAKE_SOURCE_DIR}/sheets/ui
     ${KOMAIN_INCLUDES}
 	${KOTEXT_INCLUDES}
