Remove outdated QT_* cmake variables

--- a/filters/stage/powerpoint/tests/CMakeLists.txt
+++ b/filters/stage/powerpoint/tests/CMakeLists.txt
@@ -1,4 +1,9 @@
-include_directories(${QT_INCLUDES} ${KOMAIN_INCLUDES} ${KOODF_INCLUDES} .. ../../../libmso)
+include_directories(
+    ${KOMAIN_INCLUDES}
+    ${KOODF_INCLUDES}
+    ..
+    ../../../libmso
+)
 
 ecm_add_test( TestPPT.cpp
     TEST_NAME "PPT"
