--- a/filters/sheets/html/CMakeLists.txt
+++ b/filters/sheets/html/CMakeLists.txt
@@ -7,7 +7,7 @@ include_directories(
 
 if(SHOULD_BUILD_FILTER_HTML_TO_ODS)
 
-set(html2ods_PART_SRCS htmlimport.cc )
+set(html2ods_PART_SRCS htmlimport.cc HtmlImportDebug.cpp)
 add_library(calligra_filter_html2ods MODULE ${html2ods_PART_SRCS})
 kcoreaddons_desktop_to_json(calligra_filter_html2ods calligra_filter_html2ods.desktop)
 target_link_libraries(calligra_filter_html2ods komain KF5::KHtml KF5::KDELibs4Support)
