Port to new Okular generator plugin design with embedded JSON metadata
needs own binary plugin per supported filetype, no longer possible
to simply extend metadata of an existing plugindump okular adaption

--- a/extras/okularodpgenerator/CMakeLists.txt
+++ b/extras/okularodpgenerator/CMakeLists.txt
@@ -2,21 +2,39 @@ add_definitions(-DTRANSLATION_DOMAIN=\"okularGenerator_odp\")
 
 include_directories( ${KOMAIN_INCLUDES} ${KOPAGEAPP_INCLUDES})
 
-########### next target ###############
+## shared odp generator lib
 
-set( okularGenerator_odp_SRCS OkularOdpGenerator.cpp )
+set( kookularGenerator_odp_SRCS OkularOdpGenerator.cpp )
 
-add_library(okularGenerator_odp MODULE ${okularGenerator_odp_SRCS} )
+add_library( kookularGenerator_odp SHARED ${kookularGenerator_odp_SRCS})
+generate_export_header(kookularGenerator_odp)
 
-target_link_libraries( okularGenerator_odp
+target_link_libraries(kookularGenerator_odp
+PUBLIC
     Okular::Core
+PRIVATE
     komain
     kopageapp
 )
 
-install( TARGETS okularGenerator_odp DESTINATION ${PLUGIN_INSTALL_DIR} )
+set_target_properties(kookularGenerator_odp PROPERTIES
+   VERSION ${GENERIC_CALLIGRA_LIB_VERSION} SOVERSION ${GENERIC_CALLIGRA_LIB_SOVERSION}
+)
 
-########### install files ###############
+install(TARGETS kookularGenerator_odp  ${INSTALL_TARGETS_DEFAULT_ARGS})
 
-install( FILES libokularGenerator_odp.desktop okularOdp.desktop DESTINATION ${SERVICES_INSTALL_DIR} )
-install( PROGRAMS okularApplication_odp.desktop DESTINATION ${XDG_APPS_INSTALL_DIR} )
+
+## odp generator plugin
+
+kcoreaddons_add_plugin(okularGenerator_odp_calligra
+    JSON libokularGenerator_odp.json
+    INSTALL_NAMESPACE "okular/generators"
+    SOURCES OkularOdpGeneratorPlugin.cpp
+)
+
+target_link_libraries( okularGenerator_odp_calligra
+    kookularGenerator_odp
+)
+
+install( FILES okularOdp_calligra.desktop DESTINATION ${SERVICES_INSTALL_DIR} )
+install( PROGRAMS okularApplication_odp_calligra.desktop DESTINATION ${XDG_APPS_INSTALL_DIR} )
