--- a/sheets/plugins/scripting/scripts/scripts.rc
+++ b/sheets/plugins/scripting/scripts/scripts.rc
@@ -1,4 +1,4 @@
-<!DOCTYPE KrossScripting SYSTEM "kpartgui.dtd">
+<?xml version="1.0" encoding="UTF-8" ?>
 <KrossScripting>
 
     <collection name="import" text="Import" comment="Import content">
