fix loading application icon
fix loading official krita icon when another one from system-theme is used instead,
by renamig it to calligrakrita2 .
Note to theme designers: please don't replace our icon using the new name.

--- a/krita/gemini/kritagemini.desktop
+++ b/krita/gemini/kritagemini.desktop
@@ -64,6 +64,6 @@ Name[tr]=Krita Gemini
 Name[uk]=Krita Gemini
 Name[x-test]=xxKrita Geminixx
 Exec=kritagemini
-Icon=calligrakrita
+Icon=calligrakrita2
 MimeType=application/x-krita;
 Categories=Qt;KDE;Graphics;
