--- a/krita/krita.desktop
+++ b/krita/krita.desktop
@@ -130,7 +130,7 @@ Comment[ug]=سىفىرلىق رەسىم سىزغۇ
 Comment[uk]=Цифрове малювання
 Comment[x-test]=xxDigital Paintingxx
 Type=Application
-Icon=calligrakrita
+Icon=calligrakrita2
 Categories=Qt;KDE;Graphics;
 X-KDE-ServiceTypes=Calligra/Application
 X-Calligra-DefaultMimeTypes=application/x-krita
