--- a/krita/plugins/formats/heightmap/krita_heightmap.desktop
+++ b/krita/plugins/formats/heightmap/krita_heightmap.desktop
@@ -2,7 +2,7 @@
 Categories=Qt;KDE;Office;Graphics;
 Exec=krita %u
 GenericName=
-Icon=calligrakrita
+Icon=calligrakrita2
 MimeType=image/x-r16;
 Name=Krita
 Name[af]=Krita
