--- a/krita/plugins/formats/odg/krita_odg.desktop
+++ b/krita/plugins/formats/odg/krita_odg.desktop
@@ -64,7 +64,7 @@ Name[zh_TW]=繪圖_Krita
 Exec=krita %u
 MimeType=application/vnd.oasis.opendocument.graphics;
 Type=Application
-Icon=calligrakrita
+Icon=calligrakrita2
 Categories=Qt;KDE;Office;Graphics;
 StartupNotify=true
 X-KDE-ServiceTypes=Calligra/Application
