--- a/krita/plugins/formats/pdf/krita_pdf.desktop
+++ b/krita/plugins/formats/pdf/krita_pdf.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Categories=Qt;KDE;Office;Graphics;
 Exec=krita %u
-Icon=calligrakrita
+Icon=calligrakrita2
 MimeType=application/pdf;
 Name=Krita
 Name[af]=Krita
