--- a/krita/plugins/formats/png/krita_png.desktop
+++ b/krita/plugins/formats/png/krita_png.desktop
@@ -64,7 +64,7 @@ Name[zh_TW]=繪圖_Krita
 Exec=krita %u
 MimeType=image/png;
 Type=Application
-Icon=calligrakrita
+Icon=calligrakrita2
 Categories=Qt;KDE;Office;Graphics;
 StartupNotify=true
 X-KDE-ServiceTypes=Calligra/Application
