--- a/krita/plugins/formats/ppm/krita_ppm.desktop
+++ b/krita/plugins/formats/ppm/krita_ppm.desktop
@@ -2,7 +2,7 @@
 Categories=Qt;KDE;Office;Graphics;
 Exec=krita %u
 GenericName=
-Icon=calligrakrita
+Icon=calligrakrita2
 MimeType=image/x-portable-pixmap;image/x-portable-graymap;image/x-portable-bitmap;
 Name=Krita
 Name[af]=Krita
