--- a/krita/plugins/formats/psd/krita_psd.desktop
+++ b/krita/plugins/formats/psd/krita_psd.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Categories=Qt;KDE;Office;Graphics;
 Exec=krita %u
-Icon=calligrakrita
+Icon=calligrakrita2
 MimeType=image/x-psd;image/photoshop;image/x-photoshop;image/x-vnd.adobe.photoshop;image/vnd.adobe.photoshop;
 Name=Krita
 Name[af]=Krita
