--- a/krita/plugins/formats/tiff/krita_tiff.desktop
+++ b/krita/plugins/formats/tiff/krita_tiff.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Categories=Qt;KDE;Office;Graphics;
 Exec=krita %u
-Icon=calligrakrita
+Icon=calligrakrita2
 MimeType=image/tiff;
 Name=Krita
 Name[af]=Krita
