--- a/krita/plugins/formats/xcf/krita_xcf.desktop
+++ b/krita/plugins/formats/xcf/krita_xcf.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Categories=Qt;KDE;Office;Graphics;
 Exec=krita %u
-Icon=calligrakrita
+Icon=calligrakrita2
 MimeType=image/x-xcf;
 Name=Krita
 Name[af]=Krita
