Consistently use PUBLIC/PRIVATE with target_link_libraries (& mini cleanup)

--- a/braindump/braindumpcore/CMakeLists.txt
+++ b/braindump/braindumpcore/CMakeLists.txt
@@ -6,9 +6,14 @@ set(braindumpcore_LIB_SRCS
 
 add_library(braindumpcore SHARED ${braindumpcore_LIB_SRCS})
 generate_export_header(braindumpcore)
-target_link_libraries(braindumpcore Qt5::Core Qt5::Xml Qt5::Svg komain)
-
-target_link_libraries(braindumpcore LINK_INTERFACE_LIBRARIES Qt5::Core)
+target_link_libraries(braindumpcore
+    PUBLIC
+        Qt5::Svg
+        Qt5::Core
+    PRIVATE
+        KF5::I18n
+        Qt5::Xml
+)
 
 set_target_properties(braindumpcore PROPERTIES VERSION ${GENERIC_CALLIGRA_LIB_VERSION} SOVERSION ${GENERIC_CALLIGRA_LIB_SOVERSION})
 
