--- a/karbon/ui/CMakeLists.txt
+++ b/karbon/ui/CMakeLists.txt
@@ -44,6 +44,7 @@ target_link_libraries(karbonui
     PRIVATE
         kowidgets
         koodf
+        koplugin
         KF5::IconThemes
         KF5::GuiAddons
 )
