--- a/libs/textlayout/CMakeLists.txt
+++ b/libs/textlayout/CMakeLists.txt
@@ -35,8 +35,10 @@ set(textlayout_LIB_SRCS
 add_library(kotextlayout SHARED ${textlayout_LIB_SRCS})
 generate_export_header(kotextlayout BASE_NAME kotextlayout)
 
-target_link_libraries(kotextlayout kotext)
-target_link_libraries(kotextlayout LINK_INTERFACE_LIBRARIES kotext)
+target_link_libraries(kotextlayout
+    PUBLIC
+        kotext
+)
 
 set_target_properties(kotextlayout PROPERTIES
    VERSION ${GENERIC_CALLIGRA_LIB_VERSION} SOVERSION ${GENERIC_CALLIGRA_LIB_SOVERSION}
