Build, but do not install the Sheets calendar tool for now

--- a/sheets/plugins/calendar/CMakeLists.txt
+++ b/sheets/plugins/calendar/CMakeLists.txt
@@ -8,4 +8,6 @@ add_library(kspread_plugin_tool_calendar MODULE ${kspread_plugin_tool_calendar_S
 kcoreaddons_desktop_to_json(kspread_plugin_tool_calendar kspread_plugin_tool_calendar.desktop)
 
 target_link_libraries(kspread_plugin_tool_calendar calligrasheetscommon)
-install(TARGETS kspread_plugin_tool_calendar DESTINATION ${PLUGIN_INSTALL_DIR}/calligrasheets/tools)
+
+# TODO: calendar tool does not fit into UI anymore, needs rework. Thus not installing for now
+#install(TARGETS kspread_plugin_tool_calendar DESTINATION ${PLUGIN_INSTALL_DIR}/calligrasheets/tools)
